@@ -23,6 +23,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`4202 <https://cta-redmine.irap.omp.eu/issues/4202>`_] -
+  Add optional unit parameter to ``GApplication::log_value()`` methods
 * [`4159 <https://cta-redmine.irap.omp.eu/issues/4159>`_] -
   Implement response vector cache storage in FITS file
 * Add ``GCOMObservation::npred()`` method
